@@ -13,6 +13,8 @@ Fixed bugs:
 * The "plain" <junit> <formatter> could throw a NullPointerException
   if an error occured in setUp.
 
+* <junit> will now produce output when a test times out as well.
+
 Changes from Ant 1.5.1Beta1 to 1.5.1
 ====================================
 
